# Model-Failure-Analysis-Debugging-System

./: .gitignore  README.md  pyproject.toml
config/: settings.yaml  slices.yaml
src/mfads/: cli.py
src/mfads/clustering/: cluster_errors.py  embed.py
src/mfads/datasets/: load_data.py
src/mfads/explain/: tfidf_explain.py  transformer_explain.py
src/mfads/models/: tfidf_model.py  transformer_model.py
src/mfads/report/: build_report.py
src/mfads/slicing/: features.py  slicer.py  worst_slices.py
streamlit_app/: app.py
tests/: test_slicing.py
